# video_stream

./: CMakeLists.txt  README.md
include/spdlog/details/: os-inl.h
lib/: libjson_linux-gcc-11.0.3_libmt.dylib
script/: ws_client.py
src/: VideoStreamServer.cpp  VideoStreamServer.h  main.cpp
test_html/new/: play.html
test_html/old/: play.html
